# fizz-buzz

./: README.md  best_short_solution_from_web.py  experiments.py  main.py  number_multiple_checker.py  pyproject.toml
fizz-buzz_testing/: test_zero_prfect_ozz_checker.py
testing/: test_zero_prfect_ozz_checker.py
wasteland/: experiments.py
